--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ streamlit
 logging
 pymongo==4.13.2
 mistralai==1.9.1
-pypdf
-langchain-text-splitters
+pypdf==6.0.0
+langchain-text-splitters==0.3.9
+chromadb
